# example-bot

./: .gitignore  Makefile  README.md  pyproject.toml
example_bot/: main.py
